<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_brown"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:hint="@string/hint_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/dark_brown"
        android:text="@string/button_create_order"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:backgroundTint="#4D4D4D" />

</LinearLayout>